Logs the errors with try catch
